前端框架整理

--- a/view/js/loading/index.html
+++ b/view/js/loading/index.html
@@ -1,4 +1,4 @@
-{d:header}loading用法演示{/d:header}
+{header shareTitle="loading用法演示" shareDesc="abcd"}loading用法演示{/header}
 
 <style>
     body {
@@ -423,4 +423,4 @@
     }
 </script>
 
-{d:footer/}
+{footer/}
