--- a/view/lang/index/index.html
+++ b/view/lang/index/index.html
@@ -7,6 +7,9 @@
 </style>
 
 <div id="main">
+    <a class="layui-btn layui-btn-normal" href="/demo/lang.index/index?lang=zh-cn">切换到中文</a>&nbsp;&nbsp;
+    <a class="layui-btn layui-btn-normal" href="/demo/lang.index/index?lang=en-us">切换到English</a><br/>
+
     PHP获取到的语言内容：{$langFromPhp}<br/>
     View获取到的语言内容：{$Think.lang.FAIL}
 </div>
