站点设置框架完成

--- a/view/js/component/index.html
+++ b/view/js/component/index.html
@@ -31,7 +31,7 @@
         this.fire("say", str);
     };
 
-    layui.use("gComponent", function () {
+    layui.use("component", function () {
         g.component.addEventSupport(MyComponent);
         g.component.addReadySupport(MyComponent);
         g.component.addDataSupport(MyComponent);
